# LLMProbe

./: .env.example  DESIGN.md  README.md  SPACES_README.md  app.py  pyproject.toml  requirements.txt  requirements_spaces.txt
dashboard/: app.py
data/: adversarial_templates.json  bias_templates.json  consistency_seeds.json  factual_qa.json
llmprobe/: __init__.py
llmprobe/config/: defaults.py  schema.py
llmprobe/connectors/: anthropic_connector.py  base.py  groq_connector.py
llmprobe/evaluators/: factual.py  nli.py  sentiment.py  similarity.py
llmprobe/generators/: paraphraser.py
llmprobe/pipeline/: runner.py
llmprobe/probes/: adversarial.py  base.py  bias.py  consistency.py  hallucination.py
llmprobe/reporting/: json_reporter.py  markdown_reporter.py  report.py
llmprobe/scoring/: aggregator.py  scorer.py
reports/: dashboard_run_2026-04-09_17-19-37.json  dashboard_run_2026-04-09_17-19-37.md  quick_run_2026-04-09_17-12-12.json  quick_run_2026-04-09_17-12-12.md  test_run_2026-04-09_19-56-56.json  test_run_2026-04-09_20-00-26.md
tests/integration/: test_pipeline.py
tests/unit/: test_adversarial.py  test_bias.py  test_consistency.py  test_hallucination.py  test_scoring.py
