[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmprobe"
version = "0.1.0"
description = "Automated LLM red-teaming and reliability evaluation framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["llmprobe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]